# mt_sim_proj_management

./: .gitignore  README.md  restart-dev.sh  start-dev.sh  status-dev.sh  stop-dev.sh
backend/: pyproject.toml
backend/data/: projects.json
backend/skills/analyze_requirement/: SKILL.md
backend/skills/bohrium-job/: SKILL.md  batch_submit.py  poll_jobs.py
backend/skills/build_amorphous/: SKILL.md
backend/skills/build_molecule/: SKILL.md
backend/skills/extract_computation_spec/: SKILL.md
backend/skills/extract_modeling_spec/: SKILL.md
backend/skills/generate_plan/: SKILL.md
backend/skills/gromacs-bohrium/: SKILL.md
backend/skills/optimize_plan/: SKILL.md
backend/skills/polymer-21step-equilibration/: SKILL.md  bohrium.md  reference.md
backend/skills/polymer-21step-equilibration/scripts/: extract_energy_density.sh  generate_21_mdp.py  plot_energy_density.py
backend/skills/refine_computation_spec/: SKILL.md
backend/src/: main.py
backend/src/sim_backend/: __init__.py  chem.py  config.py  dashboard.py  database.py  document_reader.py  executions.py  project_files.py  projects.py  requirements.py  server.py  workspace.py
backend/src/sim_backend/llm/: __init__.py  cli_client.py  client.py
backend/src/sim_backend/skills/: __init__.py  analysis.py  base.py  modeling.py  (+3 more)
backend/tests/: test_chem.py  test_cli_client.py  test_dashboard_payload.py  test_dev_scripts.py  test_document_reader.py  test_execution_modeling.py  test_llm_integration.py  test_project_updates.py  test_requirement_analysis.py  test_skill_prompts.py  test_workspace_integration.py
(+17 files in other folders)
